# FiberDiameter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yml  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
frontend/: package.json  tailwind.config.js
frontend/components/: App.tsx  Dropzone.tsx  Editor.tsx  FiberItem.tsx  FiberLayer.tsx  InferencePointer.tsx  Item.tsx  MeasuredImage.tsx  ScaleLayer.tsx  Section.tsx  SidePanel.tsx  SystemMenu.tsx
frontend/fiberdiameter/: package-lock.json  package.json
frontend/onnx-example/: package.json  tsconfig.json
frontend/onnx-example/components/: modelDemo.tsx
frontend/onnx-example/pages/: index.tsx
frontend/onnx-example/public/: load_image.py  py-worker.js  webworker.js
frontend/pages/: _app.tsx  app.tsx  index.tsx
frontend/public/: load_image.py  wand.cur  webworker.js
frontend/styles/: globals.css
frontend/types/: Fiber.ts  index.ts  randomcolor.d.ts
frontend/types/@coszio/: react-measurements.d.ts
frontend/utils/: index.ts
frontend/worker/: py-worker.js
src/: dataset.py  model.py  train.py  train_unet.py  training.py
src/dataset/: download_renedered_fibers.ipynb
src/dataset/create_renders/: kubruntu_sdf.Dockerfile  requirements.txt  sem_simulator.py  sem_worker.py
src/fiberdiameter/: __init__.py
src/segmentation/: UNet.py  dataset.py  test.py  train.py  train_lwbna_unet.py
tests/: test_fiberdiameter.py
